Fix background-image to ensure it does not repeat itself and covers the page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,6 +20,7 @@ h1, h2, h3 {
 
 .colorful {
   background-image: url(../../resources/images/the-flatiron-building.png);
+  background-size: cover;
   color: white;
 }
 
